public/stylesheets/default.css
/* ... */
.paginate a {
	color: #333333;
	text-decoration: none;
}

.paginate .next {
	color: #009900;
}

.paginate .prev {
	color: #009900;
}

/* *********Profile right column********** */

#right {
	float: right;
	margin-right: 12px;
}

.profile_right_column {
	width: 188px;
	margin-left: 5px;
	text-align: right;
}

.profile_right_column h4 {
	text-align: right;
	color: #009900;
	font-size: 10pt;
	font-weight: normal;
	margin: 0;
}

.profile_right_column a {
	color: #333333;
	text-decoration: none;
}

.profile_right_column #description_content {
	background-color: white;
	border-top: 2px solid #009900;
	width: 188px;
	padding-bottom: 5px;
}

.profile_right_column #description_content p {
	text-align: right;
	margin: 5px;
	font-size: 9pt;
}

.profile_right_column #description_content p:first-letter {
	margin-left: 20px;
}

.profile_right_column .column_content {
	background-color: white;
	border-top: 2px solid #009900;
	width: 188px;
	padding-bottom: 5px;
}

.profile_right_column .column_content #p_status {
	margin-top: 5px;
}

.profile_right_column .column_content p {
	text-align: right;
	margin: 5px;
	font-size: 9pt;
}

.profile_right_column .column_content #cv {
	text-align: center;
	font-size: 9pt;
	margin-bottom: 15px;
}

.profile_right_column .column_content #cv img {
	margin-right: 10px;
}

.profile_right_column .column_content img {
	margin-top: 5px;
	margin-right: 5px;
}

.profile_right_column .column_content .profile_edit {
	border-top: 1px dotted #333333;
	margin: 5px;
}

.profile_right_column .add {
	text-align: center;
	margin-top: 15px;
	margin-bottom: 10px;
}

.profile_right_column .add a {
	margin-top: 5px;
	font-size: 9pt;
	color: #333333;
}

/* *********Recent Activity*********** */

#feed_requests {
	width: 777px;
}

#feed_requests #minifeeds {
	text-align: right;
	width: 580px;
}

#feed_requests #minifeeds h4 {
	color: #009900;
	font-size: 10pt;
	font-weight: normal;
	margin: 0;
}

#feed_requests #minifeeds .list_feed {
	background-color: white;
	width: 580px;
	margin-bottom: 20px;
	padding-top: 20px;
}

#feed_requests #minifeeds .list_feed table {
	width: 580px;
	height: 36px;
}

#feed_requests #minifeeds .list_feed table td.thumb {
	width: 36px;
	vertical-align: middle;
}

#feed_requests #minifeeds .list_feed table td {
	vertical-align: top;
	padding-bottom: 10px;
	padding-left: 5px;
}

#feed_requests #minifeeds .list_feed table td p {
	margin: 0;
	font-size: 10pt;
}

#feed_requests #minifeeds .list_feed table td p a {
	color: #009900;
	text-decoration: none;
}

/* *********Requested contacts partial********** */

#personal_requests {
	width: 777px;
	text-align: right;
}

#personal_requests h4 {
	width: 777px;
	color: #009900;
	font-size: 10pt;
	font-weight: normal;
	margin: 0;
}

#personal_requests #person_request {
	background-color: white;
	border-top: 2px solid #009900;
	width: 777px;
}

#personal_requests #person_request table {
  margin-left: 7px;
	width: 190px;
	text-align: right;
}

#personal_requests h4 {
	width: 190px;
	color: #009900;
	font-size: 10pt;
	font-weight: normal;
	margin: 0;
}

#personal_requests #person_request {
	background-color: white;
	border-top: 2px solid #009900;
	width: 190px;
}

#personal_requests #person_request table {
	width: 190px;
	text-align: right;
	font-size: 9pt;
}

#personal_requests #person_request table a {
	color: #009900;
	text-decoration: none;
}

/* *********Contacts Preview*********** */

#contacts {
	width: 7px;
}

#contact_preview {
	margin-top: 10px;
}

#contact_preview h4 {
	text-align: right;
	width: 777px;
	color: #009900;
	font-size: 10pt;
	font-weight: normal;
	margin: 0;
}

#contacts_small {
	width: 777px;
	background-color: white;
	border-top: 2px solid #009900;
}

#contacts_small #nocontact {
	text-align: center;
}

#contacts_small table {
	border-spacing: 7px 5px;
}

#contacts_small table td.thumb {
	vertical-align: top;
	font-size: 8pt;
	padding-bottom: 10px;
	width: 195px;
	height: 80px;
	border-collapse: separate;
}

#contacts_small table td.thumb img {
	float: left;
	margin-right: 5px;
}

#contacts_small table td.thumb p {
	font-size: 7.5pt;
}

#contacts_small table td.thumb a {
	font-size: 8pt;
	color: #009900;
	text-decoration: none;
}

#contacts_small table td.thumb table {
	height: 80px;
	border-collapse: collapse;
}

#contacts_small table td.thumb table .person_skill {
	vertical-align: bottom;
}

#contacts_small table td.thumb table .person_skill p {
	margin: 0;
}

#contacts_small table td.thumb .delete {
	margin-top: 2px;
}

#contacts_small table td.thumb .delete a {
	color: red;
	text-decoration: none;
}

/* ***********Common contacts*********** */

#common_contacts {
	margin-top: 10px;
}

#common_contacts h4 {
	text-align: right;
	width: 777px;
	color: #009900;
	font-size: 10pt;
	font-weight: normal;
	margin: 0;
}

#common_list {
	width: 190px;
	background-color: white;
	border-top: 2px solid #009900;
	padding-top: 5px;
}

#common_list table {
	font-size: 9pt;
	border-spacing: 20px 1px;
}

#common_list table td.thumb {
	width: 60px;
	height: 80px;
	vertical-align: top;
	vertical-align-bottom: 5px;
	border-collapse: separate;
}

#common_list table td.thumb img {
	margin-right: 5px;
}

#common_list table td.thumb p {
	margin: 0;
	margin-top: 2px;
}

#common_list table td.thumb p a {
	color: #009900;
	text-decoration: none;
}

/* *********Wall of comments********** */

#wall_title {
	font-size: 10pt;
	font-weight: normal;
	width: 777px;
	text-align: right;
	color: #009900;
	margin: 0;
}

.wall {
	width: 777px;
	border-top: 2px solid #009900;
	padding-top: 10px;
	background-color: white;
}

.wall #wall_form {
	text-align: center;
	width: 581px;
	height: 136px;
	background-image: url(../images/wall/wall_public.gif);
	background-repeat: no-repeat;
}

.wall #wall_form #wall_comment {
	color: white;
	float: left;
	width: 100px;
	margin-top: 10px;
	margin-right: 20px;
	margin-left: 20px;
}

.wall #wall_form #wall_textarea {
	padding-top: 10px;
}

.wall .time {
	font-size: 8pt;
}
/* ... */

